--- a/src/app/Menu/Menu.scss
+++ b/src/app/Menu/Menu.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  max-height: calc(100vh - 40px);
+  position: sticky;
+  top: 20px;
 }
 
 .link {
