--- a/src/ui/content/Spin/Spin.scss
+++ b/src/ui/content/Spin/Spin.scss
@@ -1,17 +1,51 @@
+@keyframes spin {
+  from {
+    transform: translateY(0);
+  }
+  10% {
+    transform: translateY(-50%);
+  }
+  20% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(50%);
+  }
+  40% {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
 .root {
-  position: relative;
-  transition: all .3s;
+  transition: opacity .3s;
+  opacity: 0;
+}
+
+.show {
   opacity: 1;
-  margin: auto;
 }
 
 .hide {
   opacity: 0;
 }
 
-.children {
-  .spin + & {
-    opacity: .5;
-    pointer-events: none;
+.point {
+  display: block;
+  animation: spin 2s infinite linear;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  border: 2px solid #333;
+
+  &:nth-child(2) {
+    animation-delay: .2s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: .4s;
   }
 }
