--- a/src/app/Layout/Layout.scss
+++ b/src/app/Layout/Layout.scss
@@ -14,7 +14,9 @@
 }
 
 .content {
+  display: flex;
   flex: 1;
+  flex-direction: column;
   border-radius: 6px;
   padding: 32px;
   background: var(--color-100);
