--- a/src/ui/content/Divider/Divider.scss
+++ b/src/ui/content/Divider/Divider.scss
@@ -1,10 +1,11 @@
 .root {
   transition: all 0.3s;
   border: none;
-  border-top: solid 1px var(--color-80);
+  border-top: solid 1px #0003;
   margin: 18px 0;
   padding: 0;
   text-align: center;
+  font-size: 16px;
 }
 
 .legend {
