--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,7 +7,8 @@ html,body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  background: #fff;
+  background: var(--color-100);
+  color: var(--color-0);
   scroll-behavior: smooth;
 }
 
