--- a/src/ui/interaction/Toggle/Toggle.scss
+++ b/src/ui/interaction/Toggle/Toggle.scss
@@ -13,6 +13,11 @@
   display: none;
 }
 
+.disabled {
+  pointer-events: none;
+  opacity: .5;
+}
+
 .icon {
   display: inline-block;
   width: 42px;
