--- a/src/ui/interaction/TextArea/TextArea.scss
+++ b/src/ui/interaction/TextArea/TextArea.scss
@@ -1,6 +1,6 @@
 .input {
   --ui-textarea-resize: none;
-  --ui-textarea-autosize: 20px;
+  --ui-textarea-autosize: auto;
   --ui-textarea-min: 20px;
 
   min-height: var(--ui-textarea-min);
