--- a/src/ui/interaction/TextArea/TextArea.scss
+++ b/src/ui/interaction/TextArea/TextArea.scss
@@ -7,3 +7,8 @@
   height: var(--ui-textarea-autosize);
   resize: var(--ui-textarea-resize);
 }
+
+.clear {
+  align-self: flex-start;
+  //margin-left: -32px;
+}
