--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,11 +1,63 @@
 :root {
   --color-0: #333;
-  --color-20: #555;
-  --color-40: #777;
-  --color-60: #A0A0A0;
-  --color-70: #ebebeb;
-  --color-80: #f3f3f3;
+  --color-10: #474747;
+  --color-20: #5c5c5c;
+  --color-30: #707070;
+  --color-40: #858585;
+  --color-50: #999;
+  --color-60: #adadad;
+  --color-70: #c2c2c2;
+  --color-80: #d6d6d6;
+  --color-90: #ebebeb;
   --color-100: #fff;
+
+  --color-primary-0: #0f0919;
+  --color-primary-10: #2c1c4a;
+  --color-primary-20: #4a2f7c;
+  --color-primary-30: #6842ae;
+  --color-primary-40: #8555df;
+  --color-primary-50: #945ef8;
+  --color-primary-60: #9f6ef9;
+  --color-primary-70: #b48efa;
+  --color-primary-80: #caaffc;
+  --color-primary-90: #dfcffd;
+  --color-primary-100: #f4effe;
+
+  --color-secondary-0: #3e5bde;
+  --color-secondary-10: #4565f7;
+  --color-secondary-20: #5874f8;
+  --color-secondary-30: #6a84f9;
+  --color-secondary-40: #7d93f9;
+  --color-secondary-50: #8fa3fa;
+  --color-secondary-60: #a2b2fb;
+  --color-secondary-70: #b5c1fc;
+  --color-secondary-80: #c7d1fd;
+  --color-secondary-90: #dae0fd;
+  --color-secondary-100: #ecf0fe;
+
+  --color-negative-0: #bd3049;
+  --color-negative-10: #d23551;
+  --color-negative-20: #d74962;
+  --color-negative-30: #db5d74;
+  --color-negative-40: #e07285;
+  --color-negative-50: #e48697;
+  --color-negative-60: #e99aa8;
+  --color-negative-70: #edaeb9;
+  --color-negative-80: #f2c2cb;
+  --color-negative-90: #f6d7dc;
+  --color-negative-100: #fbebee;
+
+  --color-positive-0: #0e351f;
+  --color-positive-10: #124729;
+  --color-positive-20: #175933;
+  --color-positive-30: #207d47;
+  --color-positive-40: #207d47;
+  --color-positive-50: #2eb266;
+  --color-positive-60: #43ba75;
+  --color-positive-70: #6dc994;
+  --color-positive-80: #97d9b3;
+  --color-positive-90: #abe0c2;
+  --color-positive-100: #d5f0e0;
 
   --color-link-dark: #1565fb;
   --color-link-accent: #7572FE;
