--- a/src/ui/interaction/Toggle/Toggle.scss
+++ b/src/ui/interaction/Toggle/Toggle.scss
@@ -26,6 +26,11 @@
   border: 2px solid var(--color-0);
   position: relative;
   transition: all .3s;
+  pointer-events: none;
+
+  .input:focus + & {
+    border-color: var(--color-accent);
+  }
 
   .checked & {
     background: var(--color-0);
