--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -23,7 +23,7 @@
   transition: border-color .3s;
 
   .input:focus ~ & {
-    border-color: var(--color-accent);
+    border-color: var(--color-primary-50);
   }
   .error > .input:focus ~ &,
   .error > & {
