--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -2,12 +2,12 @@
   --ui-button-flex: none;
 
   display: inline-block;
-  transition: background-color 0.3s, box-shadow 0.3s, opacity 0.3s;
-  border: none;
-  box-shadow: inset 0 0 0 2px var(--color-0);
-  border-radius: 10px;
+  transition: background-color 0.3s, border-color .3s, opacity 0.3s;
+  border: 2px solid var(--color-primary-50);
+  background-color: var(--color-primary-50);
+  border-radius: 4px;
   padding: 0;
-  font-size: 18px;
+  font-size: 16px;
   white-space: nowrap;
   cursor: pointer;
   flex: var(--ui-button-flex);
@@ -15,42 +15,77 @@
   text-decoration: none;
   position: relative;
   min-width: 120px;
+  color: var(--color-100);
 }
 
 .primary {
-  background: var(--color-0);
-  color: var(--color-100);
-
-  &:active,
   &:hover {
-    color: var(--color-100);
-    background: var(--color-20);
-    box-shadow: inset 0 0 0 2px var(--color-20);
+    background-color: var(--color-primary-70);
+    border-color: var(--color-primary-70);
   }
 
   &:active {
-    box-shadow: inset 0 0 0 2px var(--color-20), inset 0 0 10px 0 #0005;
+    background-color: var(--color-primary-40);
+    border-color: var(--color-primary-40);
   }
 }
 
 .secondary {
-  background: var(--color-100);
-  color: var(--color-0);
+  background-color: var(--color-primary-90);
+  border-color: var(--color-primary-90);
+  color: var(--color-primary-50);
 
-  &:active,
   &:hover {
-    background: var(--color-20);
-    color: var(--color-100);
-    box-shadow: inset 0 0 0 2px var(--color-20);
+    background-color: var(--color-primary-80);
+    border-color: var(--color-primary-80);
   }
 
   &:active {
-    box-shadow: inset 0 0 0 2px var(--color-20), inset 0 0 10px 0 #0005;
+    background-color: var(--color-primary-70);
+    border-color: var(--color-primary-70);
   }
 }
 
+.negative {
+  background-color: var(--color-100);
+  border-color: var(--color-negative-10);
+  color: var(--color-negative-10);
+
+  &:hover {
+    background-color: var(--color-negative-10);
+    border-color: var(--color-negative-10);
+    color: var(--color-100);
+  }
+
+  &:active {
+    background-color: var(--color-negative-0);
+    border-color: var(--color-negative-0);
+    color: var(--color-100);
+  }
+}
+
+.positive {
+  background-color: var(--color-positive-50);
+  border-color: var(--color-positive-50);
+
+  &:hover {
+    background-color: var(--color-positive-70);
+    border-color: var(--color-positive-70);
+  }
+
+  &:active {
+    background-color: var(--color-positive-30);
+    border-color: var(--color-positive-30);
+  }
+}
+
+.root:focus {
+  outline: none;
+  border-color: var(--color-secondary-50);
+}
+
 .small > .content {
-  padding: 12px;
+  padding: 16px 24px;
 }
 
 .loading {
@@ -66,7 +101,7 @@
   display: block;
   transition: color 0.3s;
   color: inherit;
-  padding: 18px;
+  padding: 24px;
 }
 
 .spin {
@@ -74,19 +109,4 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.danger {
-  background: var(--color-red);
-  box-shadow: inset 0 0 0 2px var(--color-red);
-
-  &:hover {
-    background: var(--color-red-light);
-    box-shadow: inset 0 0 0 2px var(--color-red-light);
-  }
-
-  &:active {
-    background: var(--color-red);
-    box-shadow: inset 0 0 0 2px var(--color-red-light), inset 0 0 10px 0 #0005;
-  }
 }
