--- a/src/ui/interaction/Selector/Selector.scss
+++ b/src/ui/interaction/Selector/Selector.scss
@@ -1,3 +1,21 @@
 .root {
 
 }
+
+.popup {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.popupMenu {
+  padding: 16px;
+  cursor: pointer;
+  transition: background-color .3s, color .3s;
+  background-color: var(--color-100);
+}
+
+.selected {
+  color: var(--color-100);
+  background-color: var(--color-primary-50);
+}
