--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,6 @@
 @import "colors";
 @import "typography";
+@import "round";
 
 html,body {
   display: flex;
@@ -8,7 +9,7 @@ html,body {
   margin: 0;
   min-height: 100vh;
   background: var(--color-100);
-  color: var(--color-0);
+  color: var(--color-10);
   scroll-behavior: smooth;
 }
 
@@ -21,7 +22,7 @@ html, body, button {
 }
 
 a {
-  color: var(--color-0);
+  color: var(--color-10);
   text-decoration-thickness: 1px;
   text-underline-position: under;
 
