--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,8 @@
 :root {
   // Main colors
 
-  --color-0: #333;
-  --color-10: #474747;
+  --color-0: #1b1b1b;
+  --color-10: #2b2b2b;
   --color-20: #5c5c5c;
   --color-30: #707070;
   --color-40: #858585;
@@ -13,53 +13,65 @@
   --color-90: #ebebeb;
   --color-100: #fff;
 
-  --color-primary-0: #0f0919;
-  --color-primary-10: #2c1c4a;
-  --color-primary-20: #4a2f7c;
-  --color-primary-30: #6842ae;
+  --color-primary-0: #4a2f7c;
+  --color-primary-10: #593895;
+  --color-primary-20: #6842ae;
+  --color-primary-30: #764bc6;
   --color-primary-40: #8555df;
   --color-primary-50: #945ef8;
   --color-primary-60: #9f6ef9;
-  --color-primary-70: #b48efa;
-  --color-primary-80: #caaffc;
-  --color-primary-90: #dfcffd;
-  --color-primary-100: #f4effe;
+  --color-primary-70: #a97ef9;
+  --color-primary-80: #b48efa;
+  --color-primary-90: #bf9efb;
+  --color-primary-100: #d4bffc;
 
-  --color-secondary-0: #3e5bde;
-  --color-secondary-10: #4565f7;
-  --color-secondary-20: #5874f8;
-  --color-secondary-30: #6a84f9;
-  --color-secondary-40: #7d93f9;
-  --color-secondary-50: #8fa3fa;
-  --color-secondary-60: #a2b2fb;
-  --color-secondary-70: #b5c1fc;
-  --color-secondary-80: #c7d1fd;
-  --color-secondary-90: #dae0fd;
-  --color-secondary-100: #ecf0fe;
+  --color-secondary-0: #23337c;
+  --color-secondary-10: #293d94;
+  --color-secondary-20: #3047ad;
+  --color-secondary-30: #3751c6;
+  --color-secondary-40: #3e5bde;
+  --color-secondary-50: #4565f7;
+  --color-secondary-60: #5874f8;
+  --color-secondary-70: #6a84f9;
+  --color-secondary-80: #7d93f9;
+  --color-secondary-90: #8fa3fa;
+  --color-secondary-100: #b5c1fc;
 
-  --color-negative-0: #bd3049;
-  --color-negative-10: #d23551;
-  --color-negative-20: #d74962;
-  --color-negative-30: #db5d74;
-  --color-negative-40: #e07285;
-  --color-negative-50: #e48697;
-  --color-negative-60: #e99aa8;
-  --color-negative-70: #edaeb9;
-  --color-negative-80: #f2c2cb;
-  --color-negative-90: #f6d7dc;
-  --color-negative-100: #fbebee;
+  --color-negative-0: #6c2531;
+  --color-negative-10: #812c3b;
+  --color-negative-20: #973345;
+  --color-negative-30: #ac3a4e;
+  --color-negative-40: #c24258;
+  --color-negative-50: #d74962;
+  --color-negative-60: #db5b72;
+  --color-negative-70: #df6d81;
+  --color-negative-80: #e38091;
+  --color-negative-90: #e792a1;
+  --color-negative-100: #efb6c0;
 
-  --color-positive-0: #0e351f;
-  --color-positive-10: #124729;
-  --color-positive-20: #175933;
-  --color-positive-30: #207d47;
-  --color-positive-40: #207d47;
+  --color-warning-0: #7d3c17;
+  --color-warning-10: #96471c;
+  --color-warning-20: #af5320;
+  --color-warning-30: #c85f25;
+  --color-warning-40: #e16b29;
+  --color-warning-50: #fa772e;
+  --color-warning-60: #fb8543;
+  --color-warning-70: #fb9258;
+  --color-warning-80: #fca06d;
+  --color-warning-90: #fcad82;
+  --color-warning-100: #fdc9ab;
+
+  --color-positive-0: #175933;
+  --color-positive-10: #1c6b3d;
+  --color-positive-20: #207d47;
+  --color-positive-30: #258e52;
+  --color-positive-40: #29a05c;
   --color-positive-50: #2eb266;
   --color-positive-60: #43ba75;
-  --color-positive-70: #6dc994;
-  --color-positive-80: #97d9b3;
-  --color-positive-90: #abe0c2;
-  --color-positive-100: #d5f0e0;
+  --color-positive-70: #58c185;
+  --color-positive-80: #6dc994;
+  --color-positive-90: #82d1a3;
+  --color-positive-100: #abe0c2;
 
   // Theme colors
 
