--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -1,6 +1,6 @@
 .root {
   border: 1px solid var(--color-70);
-  border-radius: 10px;
+  border-radius: var(--round-50);
   background-color: var(--color-100);
   padding: 18px;
   transition: all .3s;
