--- a/src/ui/external/JSXStringify/JSXStringify.scss
+++ b/src/ui/external/JSXStringify/JSXStringify.scss
@@ -1,7 +1,7 @@
 .root {
   padding: 0 16px;
-  border: 1px solid var(--color-60);
-  border-radius: 8px;
+  border: 1px solid var(--color-50);
+  border-radius: var(--round-50);
   font-family: monospace;
   overflow: auto;
   max-height: 50vh;
@@ -75,5 +75,5 @@
 .propObject,
 .propFunc,
 .propArray {
-  color: var(--color-0);
+  color: var(--color-10);
 }
