--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -18,7 +18,7 @@
   position: absolute;
   inset: 0;
   border: 1px solid var(--color-80);
-  border-radius: 4px;
+  border-radius: var(--round-50);
   pointer-events: none;
   transition: border-color .3s;
 
@@ -46,7 +46,7 @@
   margin: 6px 0;
 
   &::placeholder {
-    color: var(--color-60);
+    color: var(--color-50);
   }
 
   &:focus {
@@ -76,7 +76,7 @@
   height: 20px;
   transition: all .3s;
   font-size: 16px;
-  color: var(--color-60);
+  color: var(--color-50);
   position: absolute;
 
   .error > & {
@@ -87,7 +87,7 @@
   .input:focus ~ &,
   .before ~ & {
     top: min(calc(50% - 18px), 14px);
-    color: var(--color-60);
+    color: var(--color-50);
     font-size: 12px;
   }
 }
@@ -97,7 +97,7 @@
   left: 0;
   top: 100%;
   font-size: 12px;
-  color: var(--color-60);
+  color: var(--color-50);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
