--- a/src/ui/interaction/SelectorItem/SelectorItem.scss
+++ b/src/ui/interaction/SelectorItem/SelectorItem.scss
@@ -14,9 +14,9 @@
 .value {
   display: block;
   font-size: 14px;
-  color: var(--color-60);
+  color: var(--color-50);
 
   .selected > & {
-    color: var(--color-80);
+    color: var(--color-primary-80);
   }
 }
