--- a/src/ui/external/Browser/Browser.scss
+++ b/src/ui/external/Browser/Browser.scss
@@ -2,7 +2,7 @@
   margin: 16px;
   box-shadow: 0 0 8px 0 #0005;
   border-radius: 4px;
-  overflow: hidden;
+  overflow: auto;
   background: var(--color-90);
 }
 
