--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -30,3 +30,25 @@ ol {
 li + li {
   margin-top: 16px;
 }
+
+blockquote {
+  padding: 10px 20px;
+  background: #00000014;
+  border-radius: 0 var(--round-50) var(--round-50) 0;
+  margin: 0 0 20px;
+  border-left: 5px solid var(--color-70);
+}
+
+code {
+  background: var(--color-90);
+  padding: 2px 6px;
+  border-radius: var(--round-50);
+}
+
+pre {
+  font-family: Roboto Mono, monospace;
+  padding: 16px;
+  border-radius: var(--round-50);
+  background: var(--color-90);
+  font-size: 1em;
+}
