--- a/src/ui/interaction/Checkbox/Checkbox.scss
+++ b/src/ui/interaction/Checkbox/Checkbox.scss
@@ -71,8 +71,7 @@
     background: var(--color-100);
     height: 2px;
     opacity: 0;
-    //background: red;
-    transition: all .3s;
+    transition: all .3s cubic-bezier(0, 0.4, 0.4, 1.4);
     top: 14px;
 
     .checked & {
