--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -1,17 +1,12 @@
 .root {
-  --ui-button-flex: none;
-
   outline: 1px solid transparent;
-  display: inline-block;
   transition: background-color 0.3s, border-color .3s, opacity 0.3s, outline 0.3s;
   border: 1px solid var(--color-primary-50);
   background-color: var(--color-primary-50);
   border-radius: var(--round-50);
-  padding: 0;
   font-size: 16px;
   white-space: nowrap;
   cursor: pointer;
-  flex: var(--ui-button-flex);
   text-align: center;
   text-decoration: none;
   position: relative;
@@ -23,6 +18,7 @@
   &:hover {
     background-color: var(--color-primary-60);
     border-color: var(--color-primary-60);
+    color: var(--color-100);
   }
 
   &:active {
@@ -39,6 +35,7 @@
   &:hover {
     background-color: var(--color-primary-90);
     border-color: var(--color-primary-90);
+    color: var(--color-primary-50);
   }
 
   &:active {
@@ -72,6 +69,7 @@
   &:hover {
     background-color: var(--color-positive-60);
     border-color: var(--color-positive-60);
+    color: var(--color-100);
   }
 
   &:active {
@@ -85,24 +83,10 @@
   border-color: var(--color-warning-50);
 }
 
-.small > .content {
-  padding: 16px 24px;
-}
-
 .loading {
   opacity: .5;
   pointer-events: none;
-
-  .content {
-    color: transparent;
-  }
-}
-
-.content {
-  display: block;
-  transition: color 0.3s;
-  color: inherit;
-  padding: 24px;
+  color: transparent;
 }
 
 .spin {
