add icons into toggle bar

--- a/src/ui/interaction/ToggleBar/ToggleBar.scss
+++ b/src/ui/interaction/ToggleBar/ToggleBar.scss
@@ -13,15 +13,17 @@
   flex: 1;
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  color: var(--color-10);
+  color: var(--color-primary-50);
   transition: color .3s;
   cursor: pointer;
   text-decoration: none;
   border-radius: var(--round-80);
   margin: 2px 0;
+  gap: 4px;
 
   &:hover {
     color: var(--color-10);
@@ -31,13 +33,15 @@
   }
 }
 
-.focus {
-  position: absolute;
-  inset: 2px;
-  background: var(--color-primary-100);
-  border-radius: 15px;
-  left: calc((100% - 4px) / var(--ui-toggle-bar-count) * var(--ui-toggle-bar-focus) + 2px);
-  right: calc(((100% - 4px) / var(--ui-toggle-bar-count)) * (var(--ui-toggle-bar-count) - var(--ui-toggle-bar-focus) - 1) + 2px);
+@media (pointer: fine) {
+  .focus {
+    position: absolute;
+    inset: 2px;
+    background: var(--color-primary-100);
+    border-radius: 15px;
+    left: calc((100% - 4px) / var(--ui-toggle-bar-count) * var(--ui-toggle-bar-focus) + 2px);
+    right: calc(((100% - 4px) / var(--ui-toggle-bar-count)) * (var(--ui-toggle-bar-count) - var(--ui-toggle-bar-focus) - 1) + 2px);
+  }
 }
 
 .active {
