improve option and selector

--- a/src/ui/interaction/Option/Option.scss
+++ b/src/ui/interaction/Option/Option.scss
@@ -6,7 +6,7 @@
   user-select: none;
 }
 
-.preselect {
+.preselected {
   color: var(--color-primary-20);
   background-color: var(--color-primary-100);
 
