--- a/src/ui/popups/Dropdown/Dropdown.scss
+++ b/src/ui/popups/Dropdown/Dropdown.scss
@@ -3,7 +3,7 @@
   opacity: 0;
   transition: opacity .3s, transform .3s;
   background: var(--color-100);
-  border: 1px solid var(--color-90);
+  border: 1px solid var(--color-primary-50);
   border-radius: var(--round-50);
   z-index: 1;
   transform: translateY(-8px);
