--- a/src/ui/icons/Arrow/Arrow.scss
+++ b/src/ui/icons/Arrow/Arrow.scss
@@ -4,6 +4,10 @@
   height: 18px;
   width: 18px;
   cursor: pointer;
+  background: radial-gradient(ellipse at center, var(--ui-arrow-color) 0, var(--ui-arrow-color) 1px, transparent 1px);
+  top: 4px;
+  left: 2px;
+  transition: top .3s, left .3s;
 
   &:before,
   &:after {
@@ -12,30 +16,58 @@
     position: absolute;
     height: 2px;
     width: 9px;
-    top: 50%;
+    top: calc(50% - 1px);
     background: var(--ui-arrow-color);
     transition: transform .3s;
+    transform-origin: right center;
+    right: 50%;
+    border-radius: 1px 0 0 1px;
   }
 
   &:before {
-    border-radius: 1px 0 0 1px;
-    right: calc(50% - 1px);
     transform: rotateZ(35deg);
   }
 
   &:after {
-    border-radius: 0 1px 1px 0;
-    left: calc(50% - 1px);
-    transform: rotateZ(-35deg);
+    transform: rotateZ(145deg);
   }
 }
 
-.down {
+.top {
+  top: 0;
+  left: 2px;
+
   &:before {
     transform: rotateZ(-35deg);
   }
 
   &:after {
-    transform: rotateZ(35deg);
+    transform: rotateZ(215deg);
+  }
+}
+
+.right {
+  top: 2px;
+  left: 4px;
+
+  &:before {
+    transform: rotateZ(-45deg);
+  }
+
+  &:after {
+    transform: rotateZ(45deg);
+  }
+}
+
+.left {
+  top: 2px;
+  left: 0;
+
+  &:before {
+    transform: rotateZ(-125deg);
+  }
+
+  &:after {
+    transform: rotateZ(125deg);
   }
 }
