--- a/src/ui/popups/Popout/Popout.scss
+++ b/src/ui/popups/Popout/Popout.scss
@@ -8,17 +8,25 @@
   border-radius: var(--ui-popout-radius);
   background: var(--ui-popout-background);
   box-sizing: border-box;
-  transition: all .3s, border-radius .3s ease-in;
+  transition: all .1s;
   overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.preshow {
+  opacity: 1;
 }
 
 .show {
+  transition: all .3s, border-radius .3s ease-in;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   border: solid 0 transparent;
   border-radius: 0;
+  pointer-events: all;
 
   .content {
     left: 0;
@@ -28,13 +36,14 @@
 }
 
 .hide {
-  transition: all .3s, border-radius .3s ease-out;
+  transition: all .3s, border-radius .3s ease-out, opacity .3s .3s;
   top: var(--ui-popout-top);
   left: var(--ui-popout-left);
   width: var(--ui-popout-width);
   height: var(--ui-popout-height);
   border: var(--ui-popout-border);
   border-radius: var(--ui-popout-radius);
+  opacity: 0;
 
   .content {
     top: calc(var(--ui-popout-top) * -1);
