--- a/src/ui/icons/Icon/Icon.scss
+++ b/src/ui/icons/Icon/Icon.scss
@@ -14,6 +14,7 @@
   font-size: var(--ui-icon-size);
   display: inline-flex;
   align-items: baseline;
+  color: var(--ui-icon-color);
 }
 
 .root:not(.end):before,
