--- a/src/ui/popups/Drawer/Drawer.scss
+++ b/src/ui/popups/Drawer/Drawer.scss
@@ -10,13 +10,13 @@
   opacity: 0;
   width: var(--ui-drawer-width);
   height: var(--ui-drawer-height);
-  color: var(--color-100);
-  background: var(--color-20);
+  background: var(--color-90);
   transform: var(--ui-drawer-transform);
   right: var(--ui-drawer-right);
   bottom: var(--ui-drawer-bottom);
   cursor: default;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 .show {
