--- a/src/ui/popups/Dropdown/Dropdown.scss
+++ b/src/ui/popups/Dropdown/Dropdown.scss
@@ -5,7 +5,7 @@
   background: var(--color-100);
   border: 1px solid var(--color-primary-50);
   border-radius: var(--round-50);
-  z-index: 1;
+  z-index: var(--ui-over-z-index);
   transform: translateY(-8px);
   overflow: hidden auto;
 
