improve Button loading

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,4 +2,6 @@
   --ui-arrow-color: var(--color-10);
   --ui-layout-width: 800px;
   --ui-over-z-index: 999;
+  --ui-skeleton-color-base: var(--color-90);
+  --ui-skeleton-color-shine: var(--color-primary-100);
 }
