--- a/src/styles/skeleton.scss
+++ b/src/styles/skeleton.scss
@@ -1,8 +1,3 @@
-$base-color: var(--color-90);
-$shine-color: var(--color-primary-100);
-$animation-duration: 1.6s;
-$avatar-offset: 52 + 16;
-
 @keyframes skeleton {
   from {
     background-position: 70%;
@@ -19,9 +14,31 @@ $avatar-offset: 52 + 16;
 }
 
 @mixin skeleton {
-  background-image: linear-gradient(95deg, $base-color 0, $base-color 45%, $shine-color 50%, $base-color 55%, $base-color 100%);
+  background-image: linear-gradient(95deg, var(--ui-skeleton-color-base) 0, var(--ui-skeleton-color-base) 45%, var(--ui-skeleton-color-shine) 50%, var(--ui-skeleton-color-base) 55%, var(--ui-skeleton-color-base) 100%);
   background-repeat: repeat;
   background-size: 500%;
   background-attachment: fixed;
   animation: skeleton 2s reverse infinite linear;
+}
+
+@mixin skeletonAfter {
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    inset: 0;
+    transition: opacity .3s;
+    opacity: 0;
+    pointer-events: none;
+    border-radius: inherit;
+    @include skeleton;
+  }
+}
+
+@mixin skeletonAfterShow {
+  cursor: default;
+
+  &:after {
+    opacity: 1;
+  }
 }
