--- a/src/styles/skeleton.scss
+++ b/src/styles/skeleton.scss
@@ -21,12 +21,12 @@
   animation: skeleton 2s reverse infinite linear;
 }
 
-@mixin skeletonAfter {
+@mixin skeletonAfter($inset: 0) {
   &:after {
     content: '';
     display: block;
     position: absolute;
-    inset: 0;
+    inset: $inset;
     transition: opacity .3s;
     opacity: 0;
     pointer-events: none;
