--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -17,10 +17,7 @@
   box-sizing: content-box;
   color: var(--color-100);
 
-  @include skeletonAfter;
-  &:after {
-    inset: -1px;
-  }
+  @include skeletonAfter(-1px);
 }
 
 .primary {
