--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -1,3 +1,5 @@
+@import "src/styles/skeleton";
+
 .root {
   border: 1px solid var(--color-70);
   border-radius: var(--round-50);
@@ -8,6 +10,8 @@
   opacity: 0;
   transform: translateZ(50px);
   box-shadow: 0 0 30px -10px rgba(109, 109, 109, 0);
+
+  @include skeletonAfter(-1px);
 }
 
 .show {
@@ -41,6 +45,10 @@
   &:nth-child(3n) {
     transition: all .2s;
   }
+}
+
+.loading {
+  @include skeletonAfterShow;
 }
 
 .clickable {
