--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -10,6 +10,7 @@
   opacity: 0;
   transform: translateZ(50px);
   box-shadow: 0 0 30px -10px rgba(109, 109, 109, 0);
+  text-decoration: none;
 
   @include skeletonAfter(-1px);
 }
