--- a/src/ui/interaction/Slides/Slides.scss
+++ b/src/ui/interaction/Slides/Slides.scss
@@ -3,13 +3,16 @@
   min-height: 120px;
   position: relative;
   scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
   }
+}
+
+.ready {
+  scroll-behavior: smooth;
 }
 
 .vertical {
